fix: alignment issues in techstack section

--- a/src/HomePageSections/TechStack.module.css
+++ b/src/HomePageSections/TechStack.module.css
@@ -10,7 +10,7 @@
     border: 1px solid rgba(255, 255, 255, 0.18);
     border-radius: 32px;
 
-    min-height: 60vh;
+    min-height: 50vh;
 
     margin: 0% 1%;
     border-radius: 10px;
@@ -41,7 +41,7 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: start;
     align-items: flex-start;
 
     flex: 1;
@@ -180,7 +180,7 @@
 @media only screen and (max-width: 1000px) {
     .techStack {
         /* margin: 0% 2%; */
-        min-height: 40vh;
+        min-height: 50vh;
     }
 
     .mainTech {
@@ -192,6 +192,32 @@
 @media only screen and (max-width: 768px) {
     .techStack {
         margin: 0% 2%;
+        min-height: 50vh;
+    }
+
+    .mainTech {
+        flex: 1;
+        grid-template-columns: auto auto auto;
+        grid-template-rows: auto auto auto;
+        min-width: 100%;
+
+        row-gap: 0px;
+    }
+}
+
+@media only screen and (max-width: 515px) {
+    .techStack {
+        padding: 5%;
+        min-height: 70vh;
+    }
+
+    .mainTech {
+        flex: 1;
+        grid-template-columns: auto auto;
+        grid-template-rows: auto auto;
+        min-width: 100%;
+
+        row-gap: 0px;
     }
 }
 
